Resolve recipe details page merge conflict

--- a/G00439373/src/app/pages/recipe-details/recipe-details.component.html
+++ b/G00439373/src/app/pages/recipe-details/recipe-details.component.html
@@ -5,9 +5,5 @@
 </ion-header>
 
 <ion-content class="ion-padding">
-  <p>Recipe Details Page</p>
-
-  <ion-button routerLink="/home">
-    Back to Home
-  </ion-button>
+  <p>Recipe ID: {{ recipeId }}</p>
 </ion-content>
