--- a/G00439373/src/app/pages/home/home.component.html
+++ b/G00439373/src/app/pages/home/home.component.html
@@ -6,25 +6,41 @@
 
 <ion-content class="ion-padding">
 
-  <p>Student Number: G00439373</p>
+  <p><strong>Student Number:</strong> G00439373</p>
 
   <ion-item>
-    <ion-label position="floating">Enter Ingredients (comma separated)</ion-label>
+    <ion-label position="floating">
+      Enter Ingredients (comma separated)
+    </ion-label>
     <ion-input [(ngModel)]="searchIngredients"></ion-input>
   </ion-item>
 
-  <ion-button expand="block" (click)="onSearch()">Search</ion-button>
+  <ion-button expand="block" (click)="onSearch()">
+    Search
+  </ion-button>
 
-  <div *ngIf="recipes.length > 0" class="results">
+  <!-- Results -->
+  <div *ngIf="recipes.length > 0">
+
     <ion-card *ngFor="let recipe of recipes" style="margin-top: 15px;">
       <img [src]="recipe.image" />
+
       <ion-card-header>
         <ion-card-title>{{ recipe.title }}</ion-card-title>
       </ion-card-header>
+
       <ion-card-content>
-        <ion-button expand="block" color="primary">Details</ion-button>
+        <ion-button
+          expand="block"
+          color="primary"
+          [routerLink]="['/details', recipe.id]"
+        >
+          Details
+        </ion-button>
       </ion-card-content>
+
     </ion-card>
+
   </div>
 
 </ion-content>
