--- a/G00439373/src/app/pages/home/home.component.html
+++ b/G00439373/src/app/pages/home/home.component.html
@@ -37,6 +37,15 @@
         >
           Details
         </ion-button>
+
+        <ion-button
+          expand="block"
+          color="secondary"
+          (click)="addToFavourites(recipe)"
+          style="margin-top: 8px;"
+        >
+          Add to Favourites
+        </ion-button>
       </ion-card-content>
 
     </ion-card>
