--- a/G00439373/src/app/pages/recipe-details/recipe-details.component.html
+++ b/G00439373/src/app/pages/recipe-details/recipe-details.component.html
@@ -1,39 +1,36 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Recipe Details</ion-title>
+    <ion-title>{{ recipeDetail?.title }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding">
+<ion-content class="ion-padding" *ngIf="recipeDetail">
 
-  <ion-spinner *ngIf="loading"></ion-spinner>
+  <img [src]="recipeDetail.image" alt="{{ recipeDetail.title }}" style="width: 100%; max-height: 250px; object-fit: cover;" />
 
-  <div *ngIf="!loading && recipe">
+  <h2>Ingredients</h2>
+  <ion-list>
+    <ion-item *ngFor="let ingredient of recipeDetail.extendedIngredients">
+      <ion-label>
+        {{ ingredient.original }}<br />
+        <small>
+          <!-- Show measurement based on setting -->
+          {{ measurement === 'metric' 
+            ? (ingredient.measures.metric.amount + ' ' + ingredient.measures.metric.unitLong) 
+            : (ingredient.measures.us.amount + ' ' + ingredient.measures.us.unitLong)
+          }}
+        </small>
+      </ion-label>
+    </ion-item>
+  </ion-list>
 
-    <img [src]="recipe.image" style="width: 100%; border-radius: 8px;" />
-
-    <h2>{{ recipe.title }}</h2>
-
-    <h3>Ingredients</h3>
-    <ion-list>
-      <ion-item *ngFor="let ingredient of recipe.extendedIngredients">
-        {{ ingredient.original }}
-      </ion-item>
-    </ion-list>
-
-    <h3>Instructions</h3>
-    <ion-list *ngIf="recipe.analyzedInstructions?.length">
-      <ion-item
-        *ngFor="let step of recipe.analyzedInstructions[0].steps"
-      >
-        {{ step.number }}. {{ step.step }}
-      </ion-item>
-    </ion-list>
-
-    <p *ngIf="!recipe.analyzedInstructions?.length">
-      No instructions available.
-    </p>
-
-  </div>
+  <h2>Instructions</h2>
+  <ion-list>
+    <ion-item *ngFor="let step of recipeDetail.analyzedInstructions[0]?.steps">
+      <ion-label>
+        <strong>Step {{ step.number }}:</strong> {{ step.step }}
+      </ion-label>
+    </ion-item>
+  </ion-list>
 
 </ion-content>
