dark mode toggle

--- a/G00439373/src/app/pages/favourites/favourites.page.html
+++ b/G00439373/src/app/pages/favourites/favourites.page.html
@@ -4,6 +4,7 @@
   </ion-toolbar>
 </ion-header>
 
+
 <ion-content class="ion-padding">
   <ion-list *ngIf="favourites.length > 0; else noFavourites">
     <ion-item *ngFor="let recipe of favourites">
@@ -15,6 +16,11 @@
       </ion-button>
     </ion-item>
   </ion-list>
+
+  <ion-button color="danger" expand="block" (click)="clearFavourites()">
+  Clear All Favourites
+  </ion-button>
+
 
   <ng-template #noFavourites>
     <p>No favourites yet.</p>
