--- a/G00439373/src/app/pages/settings/settings.component.html
+++ b/G00439373/src/app/pages/settings/settings.component.html
@@ -24,4 +24,12 @@
     </ion-radio-group>
   </ion-list>
 
+  <ion-item>
+    <ion-label>Dark Mode</ion-label>
+    <ion-toggle
+      [(ngModel)]="darkMode"
+      (ionChange)="toggleDarkMode()">
+    </ion-toggle>
+  </ion-item>
+
 </ion-content>
