--- a/G00439373/src/app/pages/home/home.component.html
+++ b/G00439373/src/app/pages/home/home.component.html
@@ -1,23 +1,28 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>Recipe Finder</ion-title>
+    <ion-buttons slot="end">
+      <ion-button routerLink="/favourites" aria-label="Go to Favourites">
+        <ion-icon slot="icon-only" name="heart"></ion-icon>
+      </ion-button>
+      <ion-button routerLink="/settings" aria-label="Go to Settings">
+        <ion-icon slot="icon-only" name="settings"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
+
+<!-- Loading spinner -->
+<ion-spinner *ngIf="loading" name="crescent" class="spinner-center"></ion-spinner>
+
+<!-- Error message -->
+<ion-text color="danger" *ngIf="errorMessage" class="ion-padding">
+  {{ errorMessage }}
+</ion-text>
 
 <ion-content class="ion-padding">
 
   <p><strong>Student Number:</strong> G00439373</p>
-
-  <!-- Dark mode toggle for quick testing -->
-  <ion-item>
-    <ion-label>Dark Mode</ion-label>
-    <ion-toggle [(ngModel)]="darkMode" (ionChange)="toggleDarkMode()"></ion-toggle>
-  </ion-item>
-
-  <!-- Button to go to Favourites page -->
-  <ion-button expand="block" color="tertiary" [routerLink]="['/favourites']" style="margin-bottom: 20px;">
-    Go to Favourites
-  </ion-button>
 
   <ion-item>
     <ion-label position="floating">
@@ -26,17 +31,9 @@
     <ion-input [(ngModel)]="searchIngredients"></ion-input>
   </ion-item>
 
-  <ion-button expand="block" (click)="onSearch()" [disabled]="loading">
+  <ion-button expand="block" (click)="onSearch()">
     Search
   </ion-button>
-
-  <!-- Loading spinner -->
-  <ion-spinner *ngIf="loading" name="crescent" class="spinner-center"></ion-spinner>
-
-  <!-- Error message -->
-  <ion-text color="danger" *ngIf="errorMessage" class="ion-padding">
-    {{ errorMessage }}
-  </ion-text>
 
   <!-- Results -->
   <div *ngIf="recipes.length > 0">
@@ -66,6 +63,7 @@
           Add to Favourites
         </ion-button>
       </ion-card-content>
+
     </ion-card>
 
   </div>
